Sun Jun 10 11:20:58 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_btreebase.cc,backends/brass/brass_btreebase.h,
	  backends/chert/chert_btreebase.cc,backends/chert/chert_btreebase.h:
	  Remove unused copy constructors for BrassTable_base and
	  ChertTable_base.

Wed Jun 06 11:10:26 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Note that STEM_ALL_Z was added in
	  1.2.11.  Change already made on 1.2 branch.

Tue Jun 05 06:51:12 GMT 2012  Olly Betts <olly@survex.com>

	* common/compression_stream.cc,common/compression_stream.h: Move the
	  default argument to the CompressionStream constructor to the header
	  and mark the constructor as explicit, since it has a single argument
	  form.

Tue Jun 05 06:41:22 GMT 2012  Olly Betts <olly@survex.com>

	* api/queryvector.h: Fix somewhat dubious warning from clang.

Tue Jun 05 06:33:09 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Overhaul handling of compilers which pretend to be GCC,
	  using a simple "case" on the preprocessed output of '__INTEL_COMPILER
	  __clang__' to tell which is in use.  We now explicitly check for
	  clang, and only pass it warning flags it actually understands.  GCC
	  4.0 is now lumped in with 3.*, since we handle it exactly the same.
	  Enable -Wdouble-promotion for GCC >= 4.6.  Check for symbol
	  visibility support under any GCC-alike (which means we now run the
	  test with Intel's compiler).  Move the check for -Bsymbolic-functions 
	  to be run for all compilers.

Mon Jun 04 06:21:02 GMT 2012  Olly Betts <olly@survex.com>

	* backends/dbfactory.cc: Test if we fail to open a stub database file
	  in Xapian::Auto::open_stub() and throw an exception if so.
	* tests/api_backend.cc: Add regression test stubdb7.

Sun Jun 03 11:43:44 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/query.h: Add second fake specialised form of the
	  templated iterator Query constructor, for use in the Java bindings.
